# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  pytest.ini  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: __init__.py  diff_tree.py  gendiff.py  parsers.py
gendiff/formatters/: __init__.py  json_.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
