[project]
name = "hexlet-code"
version = "0.5.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyyaml"]

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
]
